@@ -26,16 +26,13 @@ class Tx_Oelib_DbTest extends Tx_Phpunit_TestCase {
 	 */
 	private $testingFramework;
 
-	public function setUp() {
+	protected function setUp() {
 		$this->testingFramework = new Tx_Oelib_TestingFramework('tx_oelib');
 	}
 
-	public function tearDown() {
+	protected function tearDown() {
 		$this->testingFramework->cleanUp();
-
-		unset($this->testingFramework);
 	}
-
 
 	/*
 	 * Utility functions
