@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#5204] Cleanup: Backport the TestingFramework changes from PHPUnit
 - [#5203] Cleanup: Shorten the boolean casts
 - [#5201] Cleanup: Convert intval/float to casts
 - [#5200] Cleanup: boolean -> bool, integer -> int
